--- a/SISS/Views/Login/Index.cshtml
+++ b/SISS/Views/Login/Index.cshtml
@@ -1,7 +1,10 @@
-﻿
+﻿@model SISS.Models.Login
+
+
 @{
     ViewBag.Title = "Index";
     Layout = null;
+
 }
 
 
@@ -9,18 +12,18 @@
 
 <!DOCTYPE html>
 <html>
-    
+
 <head>
     <title>Login Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">-->
-     <link href="~/Content/login.css" rel="stylesheet" />
+    <link href="~/Content/login.css" rel="stylesheet" />
 </head>
 <!--Coded by Gim Sri-->
 <body>
-	<div class="container h-100">
-		<div class="d-flex justify-content-center h-100">
+    <div class="container h-100">
+        <div class="d-flex justify-content-center h-100">
             <div class="user_card">
                 <div class="d-flex justify-content-center">
                     <div class="brand_logo_container">
@@ -29,18 +32,37 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center form_container">
-                    <form>
+                    @using (Html.BeginForm("Authorize", "Login", FormMethod.Post))
+                    {
+
                         <div class="input-group mb-3">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                             </div>
-                            <input type="text" name="" class="form-control input_user" value="" placeholder="username">
+
+                            @Html.TextBoxFor(model => model.userName, new { @class = "form-control input_user", @placeholder = "EmployeeNumber", @id = "uid_txt" })
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                @Html.ValidationMessageFor(model => model.userName)
+                            </div>
                         </div>
                         <div class="input-group mb-2">
                             <div class="input-group-append">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
                             </div>
-                            <input type="password" name="" class="form-control input_pass" value="" placeholder="password">
+
+                            @Html.TextBoxFor(model => model.password, new { @class = "form-control input_pass", @placeholder = "Password", @type = "password", @id = "pwd_txt" })
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-10">
+                                @Html.ValidationMessageFor(model => model.password)
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <lable style="color:red">@Html.DisplayFor(model => model.LoginErrorMessage)</lable>
+                            </div>
                         </div>
                         <div class="form-group">
                             <div class="custom-control custom-checkbox">
@@ -48,12 +70,14 @@
                                 <label class="custom-control-label" for="customControlInline">Remember me</label>
                             </div>
                         </div>
-                    </form>
+                        <div class="d-flex justify-content-center mt-3 login_container">
+                            <button type="submit" id="submit_btn" class="btn btn-default btn-block btn-custom login_btn" value="Login">Login</button>
+
+                        </div>
+                    }
                 </div>
-                <div class="d-flex justify-content-center mt-3 login_container">
-                    <button type="button" name="button" class="btn login_btn" onclick="location.href='@Url.Action("Index","Home")'">Log In</button>
-                </div>
-                
+               
+
                 <div class="mt-4">
                     <div class="d-flex justify-content-center links">
                         <a href="#">Forgot your password?</a>
@@ -61,7 +85,8 @@
                 </div>
             </div>
 
-	</div>
+        </div>
+     </div>
 </body>
 </html>
 
