--- a/SISS/Content/bootstrap.css
+++ b/SISS/Content/bootstrap.css
@@ -4920,7 +4920,7 @@ a.label:focus {
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
-  background-color: #777;
+ 
   border-radius: 10px;
 }
 .badge:empty {
@@ -6753,5 +6753,13 @@ button.close {
   .hidden-print {
     display: none !important;
   }
+}
+.badge-warning {
+    color: #212529;
+    background-color: #ffc107;
+}
+.badge-success {
+    color: #fff;
+    background-color: #28a745;
 }
 /*# sourceMappingURL=bootstrap.css.map */
